refactor: fix critical and major SonarQube code smells
- Fixed BLOCKER issues:
  - Renamed EQUALS field to EQUALS_OP to avoid Object.equals() clash
  - Replaced ThreadGroup with ThreadMXBean for thread management
  - Removed System.gc() call, replaced with memory statistics
  - Fixed method returning non-null Boolean instead of null

- Fixed CRITICAL issues:
  - Added explanatory comments to empty constructors
  - Added default cases to switch statements
  - Made CompileJobInfoEmbeddable serializable
  - Fixed null return issue in checkCampaignStatus method

- Fixed MAJOR issues:
  - Replaced 118 instances of Stream.collect(Collectors.toList()) with Stream.toList()
  - Removed 29 unused Collectors imports
  - Fixed hasConditions() method call to use getNodes() check

- Code improvements:
  - Added helper method evaluateBasicConditions for rule evaluation
  - Improved thread information retrieval with modern ThreadMXBean
  - Enhanced validation logic in ValidationContext with proper default cases