@@ -9,8 +9,6 @@ import vn.viettel.vds.promotion.validation.domain.model.Rule;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
-
 /**
  * Domain service for evaluating stacking rules against validation facts.
  * <p>
@@ -268,7 +266,7 @@ public class StackableRuleEvaluator {
             return ruleResults.stream()
                     .filter(r -> r.getStatus() == RuleStatus.FAILED)
                     .map(RuleResult::getReason)
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
         public static class Builder {
